# age-comparison

./: .gitignore  AGENTS.md  DATASET_REQUIREMENTS.md  README.md  pyproject.toml
data/processed/: elite_year.csv  events_with_faction_context.csv  faction_fragmentation.csv  faction_type_year.csv  faction_year.csv
data/raw/: core_elite_groups.csv  core_elite_groups_early.csv  elite_edges.csv  event_type_taxonomy.csv  events.csv  faction_model_config.json  faction_relations.csv  factions.csv  historical_faction_model_config.json  person_factions.csv  persons.csv  political_entries.csv  positions.csv  sources_early_elite_addendum.csv  sources_elite_addendum.csv  sources_factions.csv
datasets/usa/: README.md  data_dictionary.json  validation_report.txt
datasets/usa/processed/: elite_year.csv  events_with_faction_context.csv  faction_fragmentation.csv  faction_type_year.csv  faction_year.csv
datasets/usa/raw/: elite_edges.csv  events.csv  faction_relations.csv  factions.csv  periods.csv  person_factions.csv  persons.csv  (+2 more)
docs/: app.js  index.html
docs/data/: datasets.json  series-data.json  site-data.json
scripts/: append_early_elite_addendum.py  append_elite_addendum.py  append_elite_initiated_events_addendum.py  append_factions_addendum.py  append_historical_factions_addendum.py
src/power_age/: __init__.py  cli.py  compute.py  datasets.py  events.py  faction_visualize.py  factions.py  load_data.py  model_guidance.py  models.py  site_data.py  validate.py  visualize.py
tests/: test_compute.py  test_events.py  test_factions.py  test_model_guidance.py
(+2 files in other folders)
